get_single_user_info

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GITHUB_URL = "https://api.github.com"
-REACT_APP_GITHUB_TOKEN="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"
+REACT_APP_GITHUB_URL = "https://api.github.com";
+REACT_APP_GITHUB_TOKEN = "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";
